# transport_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.template  pyproject.toml  setup.cfg  transport_bot.conf.template
tests/: routes.json  test_transport.py
transport_bot/: __init__.py  __main__.py  bot.py  driver.yaml  passenger.yaml  qrcode.py  server.py  virtual_drivers.py
transport_bot/api_service/: common.py  driver.py  passenger.py  query.py  route.py  schema.py
transport_bot/channel/: __init__.py  schemas.py  telegram_impl.py
